package javaloveu.hfdp.observer.weatherstation;

public interface DisplayElement {
    void display();
}
